# advent_of_code

./: Cargo.toml  new_day.sh
src/: main.rs
src/year_2024/day_01/: mod.rs
src/year_2024/day_02/: mod.rs
src/year_2024/day_06/: grid.rs  mod.rs
src/year_2024/day_07/: base.rs  equation.rs  mod.rs
src/year_2024/day_08/: mod.rs  radio.rs
src/year_2024/day_09/: filesystem.rs  mod.rs
src/year_2024/day_09/filesystem/: mod.rs  test.rs
src/year_2024/day_10/: mod.rs
src/year_2024/day_10/island/: mod.rs  position.rs  test.rs
src/year_2024/day_10/trail/: mod.rs  test.rs
src/year_2024/day_11/: mod.rs
src/year_2024/day_11/stones/: mod.rs  test.rs
src/year_2024/day_12/: mod.rs
src/year_2024/day_12/plot/: grid.rs  mod.rs  places.rs  test.rs
src/year_2024/day_five/: mod.rs  updates.rs
src/year_2024/day_four/: grid.rs  mod.rs  test.rs
src/year_2024/day_six/: grid.rs
src/year_2024/day_three/: mod.rs  stack.rs
src/year_2024/day_two/: mod.rs
